# CPP-SS2015

CPP-Aufgabe01/: CMakeLists.txt  fix_point.cpp  fix_point.h  fix_point.hpp  fix_point_oo.cpp  fix_point_oo.hpp  test_fix_point.cpp  test_fix_point_oo.cpp
CPP-Aufgabe01_1/: CMakeLists.txt  fix_point.cpp  test_fix_point.cpp
CPP-Aufgabe01_2/: CMakeLists.txt  fix_point_oo.cpp  fix_point_oo.hpp
CPP-Aufgabe01_3/: CMakeLists.txt  fixpoint.cpp  fixpoint.hpp  test_generic_fix_point.cpp
CPP-Aufgabe02/: CMakeLists.txt  fix_point_collection.cpp  fix_point_collection.h  fix_point_oo.cpp  fix_point_oo.hpp  test_fix_point_collection.cpp
CPP-Aufgabe03/: CMakeLists.txt  fix_point_oo.hpp  main.cpp
